public/css/main.css
html { margin: 20px }
body {
  margin: 0 auto;
  font-family: 'Roboto Slab', 'Baskerville', Georgia, Times, serif;
  font-size: 20px;
  line-height: 30px;
  padding: 15px;
  width: 720px;
  background-color: #0000ff;
  background-image: url("https://s3.amazonaws.com/tumblingowl/bg.png");
}

body > strong {
font-weight: 700;
}

body > em {
font-weight: 100;
}

header, footer, section, article {
	display: block;
}
#content {
}
#by {
	font-style: italic;
  margin-right: 5px;
	font-size: 28px;
}
#caption {
	position: absolute;
	font-size: 24px;
	margin: -135px 0 0 70px;
}
#path {
	color: #b53131;
}
.date {
  font-style: italic;
  float: right;
  line-height: 43px;
  margin-right: 30px;
}
a {
  color: #b83000;
}
h1 a {
  color: black;
  text-decoration: none;
}
a:hover {
  text-decoration: underline;
}
.post header {
	margin-bottom: 10px;
}
.post .body p:first-child {
	margin-top: 0;
}
.post .body p:last-child {
	margin-bottom: 0;
}
.post {
	margin-bottom: 30px;
}
.post:last-child {
  margin-bottom: 10px;
}
.post p {
  margin: 10px 0;
}
.post .more {
  margin-top: -10px;
  margin-right: 30px;
  font-style: italic;
  text-align: right;
}
.more a {
  text-decoration: none;
}
.more a:hover { text-decoration: underline }
body > header {
  margin-left: -10px;
	display: block;
	padding-top: 30px;
	line-height: 40px;
	padding-bottom: 50px;
	margin-bottom: 50px;
	background: rgba(255, 255, 255, 0.8);
-webkit-border-top-left-radius: 20px;
-webkit-border-top-right-radius: 20px;
-webkit-border-bottom-right-radius: 20px;
-webkit-border-bottom-left-radius: 20px;
-moz-border-radius-topleft: 20px;
-moz-border-radius-topright: 20px;
-moz-border-radius-bottomright: 20px;
-moz-border-radius-bottomleft: 20px;
border-top-left-radius: 20px;
border-top-right-radius: 20px;
border-bottom-right-radius: 20px;
border-bottom-left-radius: 20px;    

}
h1, h2, h3, h4 {
  display: inline;
  margin: 0;
  font-weight: 600;
}
ul, li {
  list-style-type: none;
}
code {
  font-family: 'Anonymous Pro', 'Bitstream Vera Sans', 'Monaco', Courier, mono;
}
pre {
  padding: 20px;
}
blockquote {
  font-style: italic;
}

body > footer {
  text-align: left;
  margin-left: 10px;
	font-style: italic;
  font-size: 18px;
  color: #888;
}
body > header > h1 {
  font-family: 'Cinzel Decorative', cursive;
  /* border-left: 30px double black;  */
  padding-left: 30px;
  font-size: 3em;
  margin: 100px 10px 15px 0;
  font-weight: strong;
  position: relative;
}

body > header > img {
  float: right;
  width: 11em;
  opacity: 0.3;
  margin-right: -210px; 
  margin-bottom: -35px;
}

body > header > h4 {
  font-family: 'Tangerine', cursive;
  float: right;
  margin-right: 20px;
}

#articles {
  padding: 30px;
  background-color: rgba(225, 225, 225, 0.3);
-webkit-border-top-left-radius: 5px;
-webkit-border-top-right-radius: 5px;
-webkit-border-bottom-right-radius: 5px;
-webkit-border-bottom-left-radius: 5px;
-moz-border-radius-topleft: 5px;
-moz-border-radius-topright: 5px;
-moz-border-radius-bottomright: 5px;
-moz-border-radius-bottomleft: 5px;
border-top-left-radius: 5px;
border-top-right-radius: 5px;
border-bottom-right-radius: 5px;
border-bottom-left-radius: 5px;    
}

.post > header {
  background-color: #ccccdd;
  padding: 5px;
-webkit-border-top-left-radius: 5px;
-webkit-border-top-right-radius: 5px;
-moz-border-radius-topleft: 5px;
-moz-border-radius-topright: 5px;
border-top-left-radius: 5px;
border-top-right-radius: 5px;
margin-bottom: -5px;
padding-bottom: 10px;
}

.post > .content, .post > .more {
  background-color: #ffffff;
  padding: 10px;
-webkit-border-top-left-radius: 5px;
-webkit-border-top-right-radius: 5px;
-webkit-border-bottom-right-radius: 5px;
-webkit-border-bottom-left-radius: 5px;
-moz-border-radius-topleft: 5px;
-moz-border-radius-topright: 5px;
-moz-border-radius-bottomright: 5px;
-moz-border-radius-bottomleft: 5px;
border-top-left-radius: 5px;
border-top-right-radius: 5px;
border-bottom-right-radius: 5px;
border-bottom-left-radius: 5px;
  width: 100%;
  }

.content > p {
line-height: 3em;
margin-bottom: 10px;
}

